[gd_scene load_steps=25 format=3 uid="uid://dv8eglgyx3tvp"]

[ext_resource type="Texture2D" uid="uid://j7yosfet2k7e" path="res://imágenes/enemyRed4.png" id="1_d4pws"]
[ext_resource type="Script" path="res://Scripts/objetos.gd" id="1_hn7jc"]
[ext_resource type="Texture2D" uid="uid://bm2gevfphelwl" path="res://imágenes/exp2_0.png" id="3_gmokn"]

[sub_resource type="Animation" id="Animation_5fmqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -50)]
}

[sub_resource type="Animation" id="Animation_ku0nx"]
resource_name = "animación"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333, 2.03333, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(-70, 188), Vector2(50, 468.5), Vector2(0, 715)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hc62t"]
_data = {
"RESET": SubResource("Animation_5fmqd"),
"animación": SubResource("Animation_ku0nx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oletr"]
size = Vector2(86.5, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1bc0"]
atlas = ExtResource("3_gmokn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11530"]
atlas = ExtResource("3_gmokn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyftk"]
atlas = ExtResource("3_gmokn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq78h"]
atlas = ExtResource("3_gmokn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qnow"]
atlas = ExtResource("3_gmokn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tek2"]
atlas = ExtResource("3_gmokn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_neshi"]
atlas = ExtResource("3_gmokn")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp0aa"]
atlas = ExtResource("3_gmokn")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4am0"]
atlas = ExtResource("3_gmokn")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja8hj"]
atlas = ExtResource("3_gmokn")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r16ke"]
atlas = ExtResource("3_gmokn")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4afc5"]
atlas = ExtResource("3_gmokn")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jeox"]
atlas = ExtResource("3_gmokn")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlk6f"]
atlas = ExtResource("3_gmokn")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_or4rj"]
atlas = ExtResource("3_gmokn")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft526"]
atlas = ExtResource("3_gmokn")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_42l84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1bc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11530")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyftk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq78h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qnow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neshi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4am0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja8hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r16ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4afc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jeox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlk6f")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or4rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft526")
}],
"loop": false,
"name": &"animation",
"speed": 15.0
}]

[node name="naveEnemiga" type="Node2D"]
script = ExtResource("1_hn7jc")

[node name="Sprite2D" type="Node2D" parent="."]
position = Vector2(0, -50)

[node name="ship" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("1_d4pws")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_hc62t")
}
autoplay = "animación"

[node name="Area2D" type="Area2D" parent="Sprite2D" groups=["enemigo", "naveEnemiga"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-1.25, -0.5)
shape = SubResource("RectangleShape2D_oletr")

[node name="explosion" type="AnimatedSprite2D" parent="Sprite2D"]
position = Vector2(0, 7)
scale = Vector2(2.29688, 2.26563)
sprite_frames = SubResource("SpriteFrames_42l84")
animation = &"animation"

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
